mobile responsive, no animation -- only slight bug of too-wide viewport on mobile

--- a/gallery/styles.css
+++ b/gallery/styles.css
@@ -3,42 +3,44 @@ html::-webkit-scrollbar {
     display: none;
 }
 
-/* Set up the background image */
-body {
-    position: absolute; 
-    width: 100%;
-    background-image: url("../images/backgrounds/blueFabric.jpg");
-    background-attachment: fixed;
-    margin: 0;
-    justify-content: center;
-    overflow-x: hidden;
-    top: 20%;
-}
-
 /* Set the header  */
 header {
     position: fixed;
     z-index: 20;
     top: 0%;
     text-align: center;
+    width: 100%;
     height: 20%;
     color: white;
     background-image: url("../images/backgrounds/blueFabric.jpg");
     font-family: "Spectral", serif;
     font-style: italic;
-    width: 100%;
     padding-bottom: 1em;
+}
+
+/* Set up the body (below the header) */
+body {
+    position: absolute; 
+    top: 20%;
+    width: 100vw;
+    background-image: url("../images/backgrounds/blueFabric.jpg");
+    background-attachment: fixed;
+    justify-content: center;
+    overflow-x: hidden;
 }
 
 /* Set the size of the Emulate logo */
 .emulate{
+    position: sticky;
     width: 15%;
 } 
 
 /* Sets the style for the UL (unordered list)*/
 .navigation ul {
+    position: sticky;
     list-style-type: none; 
     margin: 0;
+    height: 5%;
 
     display: inline;
 }
@@ -70,10 +72,8 @@ header {
     width: 100%;
     flex-wrap: wrap;
     position: absolute; 
-    animation: scroll 400s linear infinite;
+    /* animation: scroll 400s linear infinite; */
     justify-content: center;
-    margin-bottom: 20px;
-    /* transform: translateY(5%); */
 }
 
 /* Images */
@@ -92,23 +92,72 @@ header {
     filter: none;
 }
 
-@keyframes scroll {
+/* @keyframes scroll {
     0% {
-        transform: translateY(0);
+        transform: translateY(0%);
     }
     100% {
         transform: translateY(-100%);
     }
-}
+} */
 
 
-@media (max-width: 750px) {
-    .event-img {
+/* Change to phone view */
+@media screen and (max-width: 800px) {
+    header {
+        position: fixed;
+        z-index: 20;
+        top: 0%;
+        left: 0%;
+        text-align: center;
         width: 100vw;
-        object-fit: cover;
-        margin: 10px 25px;
-
-        -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-        filter: grayscale(100%);
+        height: 20%;
+        color: white;
+        background-image: url("../images/backgrounds/blueFabric.jpg");
+        font-family: "Spectral", serif;
+        font-style: italic;
+        padding-bottom: 1em;
     }
+
+    .emulate {
+        width: 40%;
+        position: sticky;
+    }
+
+    .event-img {
+        width: 80vw;
+        object-fit: cover;
+        margin: 5vw 5vw;
+
+        -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+        filter: grayscale(0%);
+    }
+    
+    .navigation ul{
+        position: sticky;
+        list-style-type: none; 
+        margin: 0;
+        height: 5%;
+
+        display: inline;
+    }
+    .navigation li{
+        border: none;
+        background: none;
+        display: inline;
+        color: white;
+        font-size: 12px;
+    }
+
+    body {
+        position: absolute; 
+        top: 20%;
+        width: 100vw;
+        background-image: url("../images/backgrounds/blueFabric.jpg");
+        background-attachment: fixed;
+        padding-bottom: 2em;
+        justify-content: center;
+        overflow-x: hidden;
+    }
+    
 }
